# ai-cockpit-template

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  skills_manifest.json
.claude/skills/land/: skill.md
.forge/: installed.yaml
.github/workflows/: ci.yml  publish.yml
.ike/completed/: TASK-0005 - sync-new-skills-to-existing-cockpits.md  TASK-0006 - integrate-loss-forge-define-loss-functions-and-mis.md
.ike/tasks/: TASK-0002 - configure-pypi-trusted-publisher-for-auto-publish-.md
src/ai_cockpit/: __init__.py  __main__.py  cli.py
src/ai_cockpit/template/: state.json
src/ai_cockpit/template/.claude/skills/can-i-close/: skill.md
src/ai_cockpit/template/.claude/skills/pre-flight/: skill.md
src/ai_cockpit/template/.claude/skills/takeoff/: skill.md
src/ai_cockpit/template/.claude/skills/touch-and-go/: skill.md
src/ai_cockpit/template/tools/learning-browser/: README.md
tests/: test_cli.py
tools/learning-browser/: README.md
